--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
     <link rel="stylesheet" href="styles.css" />
-    <title>Web Design Mastery | AgencyBD</title>
+    <title>Web Design Mastery | Social Santa</title>
   </head>
   <body>
     <nav>
@@ -65,10 +65,10 @@
         <div class="service__grid">
           <div class="service__card">
             <div><i class="ri-pencil-ruler-2-line"></i></div>
-            <h4>Product Design</h4>
+            <h4>Social Media Marketing</h4>
             <p class="section__description">
-              We craft user-friendly digital products that solve real problems
-              and enhance customer satisfaction.
+              Our Social Media Marketing services help your business build relationships, 
+              increase engagement, and drive traffic. From content creation to ad campaigns – we handle it all!
             </p>
           </div>
           <div class="service__card">
@@ -99,6 +99,49 @@
         <div class="service__btn">
           <button class="btn">All Our Services</button>
         </div>
+      </div>
+    </section>
+    
+     <section class="section__container about__container" id="about">
+      <div class="about__image">
+        <img src="assets/about.png" alt="about" />
+      </div>
+      <div class="about__content">
+        <h2 class="section__header">
+          We Create Ideas & Policies for Your Company Future
+        </h2>
+        <ul class="about__list">
+          <li>
+            <span><i class="ri-focus-2-line"></i></span>
+            <div>
+              <h4>Company Mission</h4>
+              <p class="section__description">
+                We aim to empower brands with innovative solutions that drive
+                growth, impact, and long-term success.
+              </p>
+            </div>
+          </li>
+          <li>
+            <span><i class="ri-slideshow-line"></i></span>
+            <div>
+              <h4>Company Vision</h4>
+              <p class="section__description">
+                To be a trusted digital partner shaping the future of businesses
+                through creativity and technology.
+              </p>
+            </div>
+          </li>
+          <li>
+            <span><i class="ri-search-eye-line"></i></span>
+            <div>
+              <h4>Our Philosophy</h4>
+              <p class="section__description">
+                We believe in collaboration, transparency, and bold thinking to
+                deliver meaningful results for every client.
+              </p>
+            </div>
+          </li>
+        </ul>
       </div>
     </section>
 
@@ -295,21 +338,6 @@
       </form>
    </section>
 
-      <!--  <section class="section__container subscribe__container" id="contact">
-      <div class="subscribe__content">
-        <h2 class="section__header">
-          Subscribe Newsletter Get Latest Updates and Dates
-        </h2>
-        <form action="/">
-          <input type="text" placeholder="Enter your email here..." />
-          <button class="btn">
-            Subscribe
-            <span><i class="ri-arrow-right-long-line"></i></span>
-          </button>
-        </form>
-      </div>
-    </section> -->
-
     <footer>
       <div class="section__container footer__container">
         <div class="footer__col">
@@ -369,7 +397,7 @@
             </li>
             <li>
               <a href="#">
-                <span><i class="ri-mail-fill"></i></span> info@agencybd.com
+                <span><i class="ri-mail-fill"></i></span> info@Social Santa.com
               </a>
             </li>
             <li>
@@ -425,10 +453,7 @@
     }
 
     alert("Form submitted successfully!");
-    // You can submit the form or reset here if needed
-    // e.target.submit();
-    // or
-    // e.target.reset();
+  
   });
 </script>
   
